Provider must be react-redux?

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.2.6",
     "@rescript/core": "^1.5.2",
     "preact": "^10.22.1",
+    "react-redux": "^9.1.2",
     "rescript": "^11.1.2"
   },
   "devDependencies": {
